We can reduce the size of a GCC 8.4.0 debug build from
360.448bytes down to ~
348.160bytes
by undefining the CD_SANITY macro.
The driver works very reliably for many years now. Justified therefore.
To make that compile we also have and should to fix a copy-paste:
Because with CD_SANITY not being defined, a bug gets obvious:
In this case the macro ASSERT_OPTIONAL_FCB was defined twice.
The size decreases also for all other compilers, but byte-count-reduce is not 1:1 to GCC.
CORE-17405.patch