[0.4.10][CDFS] Fix a macro-copy-paste and shrink the binary size CORE-17405

picked from 0.4.15-dev-1456-g 889eab7